# dataclasses-struct

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-docs.txt  zensical.toml
.github/workflows/: ci.yml  docs.yml  test.yaml  test.yml
dataclasses_struct/: __init__.py  _typing.py  dataclass.py  field.py  sizes.py  types.py
dataclasses_struct/contrib/: ipython.py
dataclasses_struct/ext/: mypy_plugin.py
docs/: api-reference.md  guide.md  index.md  types-reference.md  usage.md
test/: conftest.py  struct.c  test-mypy-plugin.yml  test_cstruct.py  test_dataclasses_field.py  test_decorator.py  test_fields.py  test_mypy_plugin.py  test_nested.py  test_pack_unpack.py  test_padding.py  test_postponed_eval.py  test_str_type_annotations.py  test_type_checking.py  test_validation.py
test/contrib/: test_ipython.py
